--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="script.js" defer></script>
+    <!-- Analytics -->
+    <script defer src="https://umami.manaiakalani.info/script.js" data-website-id="eaa93b0d-6efe-4983-9cac-513745653ae5"></script>
 </head>
 <body>
     <header>
