--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="script.js" defer></script>
     <!-- Analytics -->
-    <script defer src="https://umami.manaiakalani.info/script.js" data-website-id="6b6359fb-50da-4ceb-b89b-3c6686b3c176"></script>
+    <script
+    src="https://analytics.manaiakalani.info/api/script.js"
+    data-site-id="74ea30f13f32"
+    defer
+    ></script>   
 </head>
 <body>
     <header>
